[package]
name = "brainwallet-attack"
version = "1.0.0"
edition = "2021"
authors = ["Security Research Team"]
description = "Enterprise-grade brainwallet security auditing framework"
license = "MIT"

[[bin]]
name = "brainwallet-auditor"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Crypto
bip39 = "2.0"
bitcoin = { version = "0.29", features = ["serde"] }
secp256k1 = { version = "0.28", features = ["global-context", "rand"] }
tiny-hderive = "0.3"
tiny-keccak = { version = "2.0", features = ["keccak"] }
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
ripemd = "0.1"
hex = "0.4"
bs58 = "0.5"

# Ethereum
ethers = "2.0"
web3 = "0.19"

# HTTP/API
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Config
config = "0.14"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Performance
rayon = "1.8"
dashmap = "5.5"
parking_lot = "0.12"

# Bloom filter
bloom = "0.3"

# CLI
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
lazy_static = "1.4"

# Testing
mockall = "0.12"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0