[package]
name = "brainwallet-attack"
version = "1.0.0"
edition = "2021"
authors = ["Security Research Team"]
description = "Enterprise-grade brainwallet security auditing framework"
license = "MIT"

[[bin]]
name = "brainwallet-auditor"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Crypto
bip39 = "2.0"
bitcoin = { version = "0.29", features = ["serde"] }
secp256k1 = { version = "0.28", features = ["global-context", "rand"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
hex = "0.4"
bs58 = "0.5"

# HTTP/API
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Config
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# Performance
parking_lot = "0.12"

# Bloom filter
bloom = "0.3"

# CLI
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
mockall = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0